syntax = "proto3";

service CompareAndSwapService {
	rpc CompareAndSwap(CompareAndSwapRequest) returns (CompareAndSwapReply);
}

message CompareAndSwapRequest {
	int32 timeslot = 1;
	int32 bankServerId = 2;
	int32 proposeLeader = 3;
}

message CompareAndSwapReply {
	int32 timeslot = 1;
	int32 bankServerId = 2;
	int32 electedLeader = 3;
}